--- a/cursos.html
+++ b/cursos.html
@@ -16,8 +16,8 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Início</a></li> 
-                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="index.html">Início</a></li> 
+                    <li><a href="cursos.html" class="active">Cursos</a></li>
                     <li><a href="materiais.html">Materiais</a></li>
                 </ul>
             </nav>
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
