--- a/materiais.html
+++ b/materiais.html
@@ -16,9 +16,9 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Início</a></li> 
+                    <li><a href="index.html">Início</a></li> 
                     <li><a href="cursos.html">Cursos</a></li>
-                    <li><a href="materiais.html">Materiais</a></li>
+                    <li><a href="materiais.html" class="active">Materiais</a></li>
                 </ul>
             </nav>
         </div>
@@ -112,3 +112,4 @@
 
 </body>
 </html>
+
