--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="header-right">
-            <a href="login.html" class="btn">Login</a>
+            <a href="login.html" class="btn-login">Login</a>
         </div>
 
     </div>
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
