--- a/cursos.html
+++ b/cursos.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="header-right">
-            <a href="login.html" class="btn">Login</a>
+            <a href="login.html" class="btn-login">Login</a>
         </div>
 
     </div>
@@ -72,4 +72,5 @@
 
 </body>
 </html>
+
 
