Fix HTML structure and update login button class

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="header-right">
-            <a href="login.html" class="btn">Login</a>
+            <a href="login.html" class="btn-login">Login</a>
         </div>
 
     </div>
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
