--- a/materiais.html
+++ b/materiais.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="header-right">
-            <a href="login.html" class="btn">Login</a>
+            <a href="login.html" class="btn-login">Login</a>
         </div>
 
     </div>
@@ -112,4 +112,5 @@
 
 </body>
 </html>
+
 
